Installed npm modules

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "ExpressJS",
     "EJS"
   ],
-  "author": "Tom Tsiliopoulos",
+  "author": "Bhavna Pulliahgari",
   "license": "ISC",
   "homepage": ""
 }
